# Embedded-libraries

./: .gitignore  README.md
AVR/: ds3231.c  ds3231.h  i2c.c  i2c.h
AVR/project_templates/mega2560/: CMakeLists.txt
AVR/project_templates/mega2560/lib/: README
AVR/project_templates/mega2560/src/: main.c
AVR/project_templates/mega328p/: CMakeLists.txt
AVR/project_templates/mega328p/include/: main.h
AVR/project_templates/mega328p/src/: main.c
STM32/Tested and working/AT24Cxx/: AT24Cxx_stm32_hal.c  AT24Cxx_stm32_hal.h  main.c
STM32/Tested and working/AT24Cxx/doc/: Doxyfile
STM32/Tested and working/BH1750/: BH1750.c  BH1750.h  main.c
STM32/Tested and working/BH1750/doc/: Doxyfile
STM32/Tested and working/DS3231/: DS3231_stm32_hal.c  DS3231_stm32_hal.h
STM32/Tested and working/DS3231/doc/: Doxyfile
STM32/Tested and working/SN74HC595/: SN54HC595.c  SN54HC595.h  main.c
STM32/Tested and working/SN74HC595/doc/: Doxyfile
STM32/Tested and working/SSD1306/: fonts.c  fonts.h
STM32/Tested and working/SSD1306/doc/: Doxyfile
STM32/Untested/AC Relays (Linked List)/: relay.c  relay.h
STM32/Untested/DS1307/: DS1307.c  DS1307.h
STM32/Untested/Motion sensors (Linked List)/: motion_sensor.c  motion_sensor.h
STM32/Untested/stm32f4/: nucleo_nixie_clock_no_rtos.ioc
STM32/Untested/stm32f4/.metadata/: version.ini
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.cdt.core/: hackdays.language.settings.xml
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.core.resources/.projects/hackdays/: .markers
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.core.resources/.projects/hackdays/.indexes/: properties.index
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.core.resources/.projects/hackdays/.indexes/be/: properties.index
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.core.resources/.projects/hackdays/.indexes/c4/: properties.index
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.core.resources/.root/: 4.tree
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.debug.core/.launches/: hackdays Run.launch
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/http-cache/: segments_1
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history/: segments_1
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/remote-history/: segments_1
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2018/1/3/: refactorings.history  refactorings.index
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.thinkymcthinkface_66816/: node.properties
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.thinkymcthinkface_66816/FP.local.files_0/: node.properties
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.thinkymcthinkface_66816/H.local_16/: node.properties
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
STM32/Untested/stm32f4/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
STM32/Untested/stm32f4/hackdays/: .cproject  .mxproject  .project  hackdays.ioc
STM32/Untested/stm32f4/hackdays/Inc/: main.h  sonar.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  timer_config.h
STM32/Untested/stm32f4/hackdays/Src/: main.c  sonar.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  timer_config.c
